fixed some layout problems

--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -90,6 +90,25 @@ padding-bottom: 50px;
     -webkit-text-fill-color: transparent;
 
 }
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
 /*------------Events----------------*/
 .zooming{
   transition: transform .3s;
